--- a/v4.4.1/scss/_variables.scss
+++ b/v4.4.1/scss/_variables.scss
@@ -658,7 +658,7 @@ $custom-select-height-lg:           $input-height-lg !default;
 
 $custom-range-track-width:          100% !default;
 $custom-range-track-height:         $line-height !default;
-$custom-range-track-cursor:         pointer !default;
+$custom-range-track-cursor:         none !default;
 $custom-range-track-bg:             $white !default;
 
 $custom-range-thumb-width:                   $space-width !default;
